improve RouteOptions query parameter encoding